Copy and Share features, number formatting